# mai_oop_lab_01

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.devcontainer/: devcontainer.json
include/: function.h
src/: function.cpp
tests/: test.cpp  test_01.cpp
